Correction of GET verbs in TravelOrderDTO